[package]
name = "kash_cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
default-run = "kash"

[[bin]]
name = "kash"
path = "src/kash/main.rs"

[[bin]]
name = "kash-manage"
path = "src/kash_manage/main.rs"
required-features = ["manage"]

[dependencies]
tabular = "0.2.0"
colored = "2"
piechart = { version = "1.0.0", optional = true }
kash = { path = "../lib" }
kash_repo = { path = "../repo", optional = true }
kash_convert = { path = "../convert", features = ["all"] }

[dependencies.clap]
version = "3.2.14"
default-features = false
features = ["std", "derive"]

[features]
default = ["output-pie", "manage"]
output-pie = ["dep:piechart"]
manage = ["dep:kash_repo"]
