[package]
name = "kash_cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
default-run = "kash"

[[bin]]
name = "kash"
path = "src/kash/main.rs"

[[bin]]
name = "kash-manage"
path = "src/kash_manage/main.rs"
required-features = ["manage"]

[dependencies]
tabular = "0.2.0"
colored = "2"
rust_decimal = "1.26"
piechart = { version = "1.0.0", optional = true }
kash = { path = "../lib" }
kash_repo = { path = "../repo", optional = true }
kash_convert = { path = "../convert", features = ["all"] }
directories = { version = "4.0.1", optional = true }
toml = { version = "0.5.9", optional = true }

[dependencies.serde]
version = "1.0.139"
features = ["derive"]
optional = true

[dependencies.clap]
version = "3.2.14"
default-features = false
features = ["std", "derive"]

[features]
default = ["output-pie", "manage"]
output-pie = ["dep:piechart"]
manage = [
    "dep:kash_repo",
    "dep:serde",
    "dep:directories",
    "dep:toml"
]
