[package]
name = "kash_convert"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0.139", features = ["derive"] }
serde_json = { version = "1.0.82", optional = true }
toml = { version = "0.5.9", optional = true }
kash = { path = "../lib" }
camt053 = { path = "../camt053", optional = true }
ktf = { path = "../ktf", optional = true }

[dependencies.quick-xml]
version = "0.23.0"
optional = true
features = ["serialize"]

[dependencies.chrono]
version = "0.4.20"
default-features = false
features = ["alloc", "std", "serde"]
optional = true

[features]
all = ["all-inputs", "all-outputs"]
all-inputs = [
    "input-json",
    "input-toml",
    "input-camt053",
    "input-ktf"
]
all-outputs = ["output-json"]

input-json = ["dep:serde_json"]
input-toml = ["dep:toml"]
input-camt053 = ["dep:camt053", "dep:quick-xml", "dep:chrono"]
input-ktf = ["dep:ktf"]
output-json = ["dep:serde_json"]
