[package]
name = "kash_http"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "kash-http"
path = "src/main.rs"

[dependencies]
warp = { version = "0.3.2", default-features = false }
kash = { path = "../lib" }

[dependencies.tokio]
version = "1.20.1"
features = ["macros", "rt-multi-thread"]

[dependencies.kash_convert]
path = "../convert"
features = ["input_json", "output_json"]
