[package]
name = "kash"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
serde = { version = "1.0.139", features = ["derive"] }

[dependencies.chrono]
version = "0.4.20"
default-features = false
features = ["alloc", "std"]
optional = true

[features]
default = [
    "account",
    "fixed",
    "income",
    "transaction",
    "budget"
]
account = []
fixed = []
income = []
transaction = ["dep:chrono", "account"]
budget = []
