[package]
name = "kash"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
serde = { version = "1.0.139", features = ["derive"] }
regex = { version = "1.6", optional = true }

[dependencies.chrono]
version = "0.4.20"
default-features = false
features = ["alloc", "std", "serde"]
optional = true

[features]
default = [
    "account",
    "fixed",
    "income",
    "transaction",
    "budget",
    "rule",
    "savings",
    "variable"
]
account = []
fixed = []
income = []
transaction = ["dep:chrono", "account"]
budget = []
rule = ["dep:regex"]
savings = ["dep:chrono", "chrono?/clock"]
variable = []
