[package]
name = "kash_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
kash = { path = "../lib" }
wasm-bindgen = "0.2.82"
lazy_static = "1.4.0"
serde = { version = "1.0.139" }
serde_json = { version = "1.0.82" }

[dependencies.kash_repo]
path = "../repo"
default-features = false
features = ["mem"]
